additional interaction tables

--- a/03-results/10-tables/meta-study-tables/imp_Linear_slope_Interaction_adj.html
+++ b/03-results/10-tables/meta-study-tables/imp_Linear_slope_Interaction_adj.html
@@ -333,20 +333,16 @@ border: 0;
    <td style="text-align:center;"> <strong>0.00</strong> </td>
    <td style="text-align:center;"> <strong>-0.54</strong> </td>
    <td style="text-align:center;"> <strong>0.07</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.73</strong> </td>
    <td style="text-align:center;"> <strong>0.07</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.64</strong> </td>
    <td style="text-align:center;"> <strong>0.09</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.28</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> -0.02 </td>
    <td style="text-align:center;"> 0.02 </td>
    <td style="text-align:center;"> 0.16 </td>
@@ -373,15 +369,13 @@ border: 0;
    <td style="text-align:center;"> 0.13 </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>0.007</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
    <td style="text-align:center;"> <strong>0.010</strong> </td>
    <td style="text-align:center;"> <strong>0.00</strong> </td>
    <td style="text-align:center;"> <strong>-0.05</strong> </td>
    <td style="text-align:center;"> <strong>0.009</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> HILDA </td>
@@ -390,8 +384,7 @@ border: 0;
    <td style="text-align:center;"> 0.36 </td>
    <td style="text-align:center;"> <strong>-0.06</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.12</strong> </td>
    <td style="text-align:center;"> <strong>0.04</strong> </td>
    <td style="text-align:center;"> <strong>0.00</strong> </td>
@@ -403,8 +396,7 @@ border: 0;
    <td style="text-align:center;"> 0.27 </td>
    <td style="text-align:center;"> <strong>-0.03</strong> </td>
    <td style="text-align:center;"> <strong>0.006</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
    <td style="text-align:center;"> <strong>0.008</strong> </td>
    <td style="text-align:center;"> <strong>0.04</strong> </td>
@@ -419,24 +411,19 @@ border: 0;
    <td style="text-align:center;"> <strong>0.01</strong> </td>
    <td style="text-align:center;"> <strong>0.19</strong> </td>
    <td style="text-align:center;"> <strong>0.05</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.43</strong> </td>
    <td style="text-align:center;"> <strong>0.11</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.42</strong> </td>
    <td style="text-align:center;"> <strong>0.09</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.57</strong> </td>
    <td style="text-align:center;"> <strong>0.18</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.19</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.05</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
@@ -457,16 +444,13 @@ border: 0;
    <td style="text-align:center;"> 0.41 </td>
    <td style="text-align:center;"> <strong>0.31</strong> </td>
    <td style="text-align:center;"> <strong>0.06</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.28</strong> </td>
    <td style="text-align:center;"> <strong>0.05</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
    <td style="text-align:center;"> <strong>0.009</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.03</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
    <td style="text-align:center;"> <strong>0.00</strong> </td>
@@ -520,8 +504,7 @@ border: 0;
    <td style="text-align:center;"> <strong>0.04</strong> </td>
    <td style="text-align:center;"> <strong>0.15</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.003 </td>
    <td style="text-align:center;"> 0.07 </td>
    <td style="text-align:center;"> 0.48 </td>
@@ -542,23 +525,19 @@ border: 0;
    <td style="text-align:center;"> <strong>0.00</strong> </td>
    <td style="text-align:center;"> <strong>-0.21</strong> </td>
    <td style="text-align:center;"> <strong>0.06</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> -0.14 </td>
    <td style="text-align:center;"> 0.09 </td>
    <td style="text-align:center;"> 0.07 </td>
    <td style="text-align:center;"> <strong>0.14</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.07</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.08</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> SHP </td>
