--- a/03-results/10-tables/meta-tables/imp_Linear_slope_Main_adj.html
+++ b/03-results/10-tables/meta-tables/imp_Linear_slope_Main_adj.html
@@ -295,15 +295,13 @@ border: 0;
    <td style="text-align:right;"> Age </td>
    <td style="text-align:center;"> <strong>0.26</strong> </td>
    <td style="text-align:center;"> <strong>0.06</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Social Isolation </td>
    <td style="text-align:center;"> <strong>0.11</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Sex </td>
@@ -315,15 +313,13 @@ border: 0;
    <td style="text-align:right;"> Divorced (v. Married) </td>
    <td style="text-align:center;"> <strong>0.61</strong> </td>
    <td style="text-align:center;"> <strong>0.11</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Widow (v. Married) </td>
    <td style="text-align:center;"> <strong>0.54</strong> </td>
    <td style="text-align:center;"> <strong>0.15</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Never Married (v. Married) </td>
@@ -335,29 +331,25 @@ border: 0;
    <td style="text-align:right;"> Baseline Age </td>
    <td style="text-align:center;"> <strong>-0.31</strong> </td>
    <td style="text-align:center;"> <strong>0.06</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Functional Limitations </td>
    <td style="text-align:center;"> <strong>0.19</strong> </td>
    <td style="text-align:center;"> <strong>0.04</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Education </td>
    <td style="text-align:center;"> <strong>-0.07</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Income </td>
    <td style="text-align:center;"> <strong>-0.07</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Drinker </td>
@@ -381,8 +373,7 @@ border: 0;
    <td style="text-align:right;"> Conditions </td>
    <td style="text-align:center;"> <strong>0.10</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Depression </td>
@@ -394,8 +385,7 @@ border: 0;
    <td style="text-align:right;"> Episodic Memory </td>
    <td style="text-align:center;"> <strong>-0.13</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Mental Status </td>
