--- a/03-results/10-tables/meta-tables/imp_Quadratic_slope_Main_adj.html
+++ b/03-results/10-tables/meta-tables/imp_Quadratic_slope_Main_adj.html
@@ -307,29 +307,25 @@ border: 0;
    <td style="text-align:right;"> Social Isolation </td>
    <td style="text-align:center;"> <strong>0.11</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Sex </td>
    <td style="text-align:center;"> <strong>0.17</strong> </td>
    <td style="text-align:center;"> <strong>0.05</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Divorced (v. Married) </td>
    <td style="text-align:center;"> <strong>0.61</strong> </td>
    <td style="text-align:center;"> <strong>0.12</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Widow (v. Married) </td>
    <td style="text-align:center;"> <strong>0.55</strong> </td>
    <td style="text-align:center;"> <strong>0.16</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Never Married (v. Married) </td>
@@ -341,29 +337,25 @@ border: 0;
    <td style="text-align:right;"> Baseline Age </td>
    <td style="text-align:center;"> <strong>-0.28</strong> </td>
    <td style="text-align:center;"> <strong>0.07</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Functional Limitations </td>
    <td style="text-align:center;"> <strong>0.19</strong> </td>
    <td style="text-align:center;"> <strong>0.04</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Education </td>
    <td style="text-align:center;"> <strong>-0.08</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Income </td>
    <td style="text-align:center;"> <strong>-0.08</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Drinker </td>
@@ -387,8 +379,7 @@ border: 0;
    <td style="text-align:right;"> Conditions </td>
    <td style="text-align:center;"> <strong>0.11</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Depression </td>
@@ -400,8 +391,7 @@ border: 0;
    <td style="text-align:right;"> Episodic Memory </td>
    <td style="text-align:center;"> <strong>-0.11</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Mental Status </td>
