--- a/03-results/10-tables/meta-tables/unimp_Quadratic_intercept_Main_none.html
+++ b/03-results/10-tables/meta-tables/unimp_Quadratic_intercept_Main_none.html
@@ -301,8 +301,7 @@ border: 0;
    <td style="text-align:right;"> Age^2 </td>
    <td style="text-align:center;"> <strong>0.07</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
 </tbody>
 </table>
