--- a/03-results/10-tables/meta-study-tables/imp_Quadratic_slope_Interaction_adj.html
+++ b/03-results/10-tables/meta-study-tables/imp_Quadratic_slope_Interaction_adj.html
@@ -365,16 +365,13 @@ border: 0;
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>-0.62</strong> </td>
    <td style="text-align:center;"> <strong>0.10</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.76</strong> </td>
    <td style="text-align:center;"> <strong>0.15</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.94</strong> </td>
    <td style="text-align:center;"> <strong>0.13</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.04 </td>
    <td style="text-align:center;"> 0.05 </td>
    <td style="text-align:center;"> 0.23 </td>
@@ -398,12 +395,10 @@ border: 0;
    <td style="text-align:center;"> 0.27 </td>
    <td style="text-align:center;"> <strong>0.26</strong> </td>
    <td style="text-align:center;"> <strong>0.07</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.06</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.01 </td>
    <td style="text-align:center;"> 0.01 </td>
    <td style="text-align:center;"> 0.21 </td>
@@ -451,16 +446,13 @@ border: 0;
    <td style="text-align:center;"> 0.38 </td>
    <td style="text-align:center;"> <strong>0.07</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
    <td style="text-align:center;"> <strong>0.004</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>0.005</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.005 </td>
    <td style="text-align:center;"> 0.005 </td>
    <td style="text-align:center;"> 0.16 </td>
@@ -478,15 +470,13 @@ border: 0;
    <td style="text-align:center;"> <strong>0.01</strong> </td>
    <td style="text-align:center;"> <strong>-0.60</strong> </td>
    <td style="text-align:center;"> <strong>0.16</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.05 </td>
    <td style="text-align:center;"> 0.05 </td>
    <td style="text-align:center;"> 0.16 </td>
    <td style="text-align:center;"> <strong>0.09</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.04</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
    <td style="text-align:center;"> <strong>0.00</strong> </td>
@@ -507,12 +497,10 @@ border: 0;
    <td style="text-align:center;"> <strong>0.04</strong> </td>
    <td style="text-align:center;"> <strong>0.05</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
    <td style="text-align:center;"> <strong>0.003</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.005 </td>
    <td style="text-align:center;"> 0.004 </td>
    <td style="text-align:center;"> 0.12 </td>
@@ -530,8 +518,7 @@ border: 0;
    <td style="text-align:center;"> <strong>0.01</strong> </td>
    <td style="text-align:center;"> <strong>-0.57</strong> </td>
    <td style="text-align:center;"> <strong>0.17</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> -0.22 </td>
    <td style="text-align:center;"> 0.18 </td>
    <td style="text-align:center;"> 0.11 </td>
@@ -564,8 +551,7 @@ border: 0;
    <td style="text-align:center;"> 0.47 </td>
    <td style="text-align:center;"> <strong>0.09</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.02 </td>
    <td style="text-align:center;"> 0.02 </td>
    <td style="text-align:center;"> 0.10 </td>
@@ -586,12 +572,10 @@ border: 0;
    <td style="text-align:center;"> 0.10 </td>
    <td style="text-align:center;"> <strong>0.34</strong> </td>
    <td style="text-align:center;"> <strong>0.08</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.25</strong> </td>
    <td style="text-align:center;"> <strong>0.06</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.04</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>0.04</strong> </td>
@@ -684,8 +668,7 @@ border: 0;
    <td style="text-align:center;"> 0.15 </td>
    <td style="text-align:center;"> <strong>0.24</strong> </td>
    <td style="text-align:center;"> <strong>0.07</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.25</strong> </td>
    <td style="text-align:center;"> <strong>0.15</strong> </td>
    <td style="text-align:center;"> <strong>0.04</strong> </td>
@@ -697,8 +680,7 @@ border: 0;
    <td style="text-align:center;"> <strong>0.01</strong> </td>
    <td style="text-align:center;"> <strong>-0.32</strong> </td>
    <td style="text-align:center;"> <strong>0.06</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> -0.01 </td>
    <td style="text-align:center;"> 0.06 </td>
    <td style="text-align:center;"> 0.43 </td>
@@ -716,12 +698,10 @@ border: 0;
    <td style="text-align:center;"> 0.28 </td>
    <td style="text-align:center;"> <strong>-0.18</strong> </td>
    <td style="text-align:center;"> <strong>0.06</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.28</strong> </td>
    <td style="text-align:center;"> <strong>0.09</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>0.05</strong> </td>
