--- a/03-results/10-tables/meta-study-tables/unimp_Quadratic_intercept_Main_none.html
+++ b/03-results/10-tables/meta-study-tables/unimp_Quadratic_intercept_Main_none.html
@@ -303,23 +303,19 @@ border: 0;
    <td style="text-align:right;"> ELSA </td>
    <td style="text-align:center;"> <strong>-0.14</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.14</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> GSOEP </td>
    <td style="text-align:center;"> <strong>0.28</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.05</strong> </td>
    <td style="text-align:center;"> <strong>0.004</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> HILDA </td>
@@ -328,8 +324,7 @@ border: 0;
    <td style="text-align:center;"> 0.17 </td>
    <td style="text-align:center;"> <strong>-0.01</strong> </td>
    <td style="text-align:center;"> <strong>0.003</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> HRS </td>
@@ -338,8 +333,7 @@ border: 0;
    <td style="text-align:center;"> 0.19 </td>
    <td style="text-align:center;"> <strong>0.08</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> LISS </td>
@@ -348,8 +342,7 @@ border: 0;
    <td style="text-align:center;"> <strong>0.01</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>0.004</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> OCTOTWIN </td>
@@ -364,34 +357,28 @@ border: 0;
    <td style="text-align:right;"> SATSA </td>
    <td style="text-align:center;"> <strong>0.29</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.12</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> SHARE </td>
    <td style="text-align:center;"> <strong>0.09</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.12</strong> </td>
    <td style="text-align:center;"> <strong>0.008</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> SHP </td>
    <td style="text-align:center;"> <strong>0.13</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
    <td style="text-align:center;"> <strong>0.004</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Meta-Analytic </td>
@@ -400,8 +387,7 @@ border: 0;
    <td style="text-align:center;"> 0.19 </td>
    <td style="text-align:center;"> <strong>0.07</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
 </tbody>
 </table>
