--- a/03-results/10-tables/meta-study-tables/unimp_Quadratic_slope_Interaction_adj.html
+++ b/03-results/10-tables/meta-study-tables/unimp_Quadratic_slope_Interaction_adj.html
@@ -365,16 +365,13 @@ border: 0;
    <td style="text-align:center;"> <strong>0.03</strong> </td>
    <td style="text-align:center;"> <strong>-0.66</strong> </td>
    <td style="text-align:center;"> <strong>0.09</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.78</strong> </td>
    <td style="text-align:center;"> <strong>0.15</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.97</strong> </td>
    <td style="text-align:center;"> <strong>0.13</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.06 </td>
    <td style="text-align:center;"> 0.05 </td>
    <td style="text-align:center;"> 0.12 </td>
@@ -398,12 +395,10 @@ border: 0;
    <td style="text-align:center;"> 0.47 </td>
    <td style="text-align:center;"> <strong>0.26</strong> </td>
    <td style="text-align:center;"> <strong>0.07</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.06</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.01 </td>
    <td style="text-align:center;"> 0.01 </td>
    <td style="text-align:center;"> 0.23 </td>
@@ -451,16 +446,13 @@ border: 0;
    <td style="text-align:center;"> 0.43 </td>
    <td style="text-align:center;"> <strong>0.07</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>0.004</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>0.004</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.006 </td>
    <td style="text-align:center;"> 0.004 </td>
    <td style="text-align:center;"> 0.08 </td>
@@ -478,19 +470,16 @@ border: 0;
    <td style="text-align:center;"> <strong>0.01</strong> </td>
    <td style="text-align:center;"> <strong>-0.56</strong> </td>
    <td style="text-align:center;"> <strong>0.15</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.08 </td>
    <td style="text-align:center;"> 0.05 </td>
    <td style="text-align:center;"> 0.06 </td>
    <td style="text-align:center;"> <strong>0.07</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.05</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> -0.006 </td>
    <td style="text-align:center;"> 0.01 </td>
    <td style="text-align:center;"> 0.31 </td>
@@ -511,8 +500,7 @@ border: 0;
    <td style="text-align:center;"> <strong>0.00</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
    <td style="text-align:center;"> <strong>0.003</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.005 </td>
    <td style="text-align:center;"> 0.004 </td>
    <td style="text-align:center;"> 0.10 </td>
@@ -530,8 +518,7 @@ border: 0;
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>-0.61</strong> </td>
    <td style="text-align:center;"> <strong>0.17</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> -0.26 </td>
    <td style="text-align:center;"> 0.18 </td>
    <td style="text-align:center;"> 0.07 </td>
@@ -564,8 +551,7 @@ border: 0;
    <td style="text-align:center;"> 0.39 </td>
    <td style="text-align:center;"> <strong>0.09</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.02 </td>
    <td style="text-align:center;"> 0.02 </td>
    <td style="text-align:center;"> 0.16 </td>
@@ -586,19 +572,16 @@ border: 0;
    <td style="text-align:center;"> 0.17 </td>
    <td style="text-align:center;"> <strong>0.40</strong> </td>
    <td style="text-align:center;"> <strong>0.08</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.31</strong> </td>
    <td style="text-align:center;"> <strong>0.06</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.04</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>-0.05</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.003 </td>
    <td style="text-align:center;"> 0.01 </td>
    <td style="text-align:center;"> 0.41 </td>
@@ -691,22 +674,19 @@ border: 0;
    <td style="text-align:center;"> <strong>0.01</strong> </td>
    <td style="text-align:center;"> <strong>0.26</strong> </td>
    <td style="text-align:center;"> <strong>0.08</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.10 </td>
    <td style="text-align:center;"> 0.09 </td>
    <td style="text-align:center;"> 0.13 </td>
    <td style="text-align:center;"> <strong>-0.34</strong> </td>
    <td style="text-align:center;"> <strong>0.04</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.05</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>-0.07</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.01 </td>
    <td style="text-align:center;"> 0.01 </td>
    <td style="text-align:center;"> 0.08 </td>
@@ -718,16 +698,13 @@ border: 0;
    <td style="text-align:center;"> 0.32 </td>
    <td style="text-align:center;"> <strong>-0.17</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.15</strong> </td>
    <td style="text-align:center;"> <strong>0.05</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
    <td style="text-align:center;"> <strong>0.007</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> -0.010 </td>
    <td style="text-align:center;"> 0.01 </td>
    <td style="text-align:center;"> 0.17 </td>
@@ -763,8 +740,7 @@ border: 0;
    <td style="text-align:center;"> 0.33 </td>
    <td style="text-align:center;"> <strong>-0.09</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.04 </td>
    <td style="text-align:center;"> 0.04 </td>
    <td style="text-align:center;"> 0.11 </td>
@@ -830,8 +806,7 @@ border: 0;
    <td style="text-align:center;"> 0.27 </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
    <td style="text-align:center;"> <strong>0.010</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.004 </td>
    <td style="text-align:center;"> 0.005 </td>
    <td style="text-align:center;"> 0.47 </td>
