--- a/03-results/10-tables/meta-study-tables/unimp_Quadratic_slope_Main_none.html
+++ b/03-results/10-tables/meta-study-tables/unimp_Quadratic_slope_Main_none.html
@@ -303,34 +303,28 @@ border: 0;
    <td style="text-align:right;"> ELSA </td>
    <td style="text-align:center;"> <strong>-0.16</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.15</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> GSOEP </td>
    <td style="text-align:center;"> <strong>0.26</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.05</strong> </td>
    <td style="text-align:center;"> <strong>0.004</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> HILDA </td>
    <td style="text-align:center;"> <strong>-0.05</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.02</strong> </td>
    <td style="text-align:center;"> <strong>0.004</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> HRS </td>
@@ -339,15 +333,13 @@ border: 0;
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>0.08</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> LISS </td>
    <td style="text-align:center;"> <strong>-0.05</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
    <td style="text-align:center;"> <strong>0.006</strong> </td>
    <td style="text-align:center;"> <strong>0.04</strong> </td>
@@ -365,34 +357,28 @@ border: 0;
    <td style="text-align:right;"> SATSA </td>
    <td style="text-align:center;"> <strong>0.28</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.13</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> SHARE </td>
    <td style="text-align:center;"> <strong>0.07</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.13</strong> </td>
    <td style="text-align:center;"> <strong>0.009</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> SHP </td>
    <td style="text-align:center;"> <strong>0.11</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
    <td style="text-align:center;"> <strong>0.005</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Meta-Analytic </td>
