--- a/03-results/10-tables/meta-tables/imp_Linear_slope_b.age_adj.html
+++ b/03-results/10-tables/meta-tables/imp_Linear_slope_b.age_adj.html
@@ -373,8 +373,7 @@ border: 0;
    <td style="text-align:right;"> b.age:episodic </td>
    <td style="text-align:center;"> <strong>-0.05</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> b.age:mstat </td>
