--- a/03-results/10-tables/meta-tables/unimp_Linear_slope_Main_adj.html
+++ b/03-results/10-tables/meta-tables/unimp_Linear_slope_Main_adj.html
@@ -295,36 +295,31 @@ border: 0;
    <td style="text-align:right;"> Age </td>
    <td style="text-align:center;"> <strong>0.27</strong> </td>
    <td style="text-align:center;"> <strong>0.07</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Social Isolation </td>
    <td style="text-align:center;"> <strong>0.12</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Sex </td>
    <td style="text-align:center;"> <strong>0.20</strong> </td>
    <td style="text-align:center;"> <strong>0.06</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Divorced (v. Married) </td>
    <td style="text-align:center;"> <strong>0.74</strong> </td>
    <td style="text-align:center;"> <strong>0.12</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Widow (v. Married) </td>
    <td style="text-align:center;"> <strong>0.61</strong> </td>
    <td style="text-align:center;"> <strong>0.16</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Never Married (v. Married) </td>
@@ -336,22 +331,19 @@ border: 0;
    <td style="text-align:right;"> Baseline Age </td>
    <td style="text-align:center;"> <strong>-0.30</strong> </td>
    <td style="text-align:center;"> <strong>0.07</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Functional Limitations </td>
    <td style="text-align:center;"> <strong>0.28</strong> </td>
    <td style="text-align:center;"> <strong>0.04</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Education </td>
    <td style="text-align:center;"> <strong>-0.10</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
 </tbody>
 </table>
