--- a/03-results/10-tables/meta-tables/unimp_Quadratic_slope_Interaction_adj.html
+++ b/03-results/10-tables/meta-tables/unimp_Quadratic_slope_Interaction_adj.html
@@ -373,8 +373,7 @@ border: 0;
    <td style="text-align:right;"> Age^2 x Baseline Age </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
    <td style="text-align:center;"> <strong>0.010</strong> </td>
-   <td style="text-align:center;"> <strong> </strong>
-</td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Age^2 x Functional Limitations </td>
